--- a/Src/CSS/styles.css
+++ b/Src/CSS/styles.css
@@ -7,8 +7,8 @@
 
 :root {
     --cor-clara: #fff0f6;  
-    --cor-intermediaria: #EDAFB8; 
-    --cor-de-destaque: #960f65; 
+    --cor-intermediaria: #86C6F4; 
+    --cor-de-destaque: #139487; 
     --cor-secundaria-intermediaria: #3883ac;   
     --cor-secundaria-clara: #b8d6e6;
     --cor-oportunidades: #56af39;
