--- a/Src/CSS/aval.css
+++ b/Src/CSS/aval.css
@@ -16,7 +16,9 @@
 }
 
 main {
+    padding-left: 30vw;
     padding-top: 130px;
+    margin: 0 auto;
 }
 
 .search-bar {
@@ -162,4 +164,109 @@ form button[type="submit"] {
 
 form button[type="submit"]:hover {
     background-color: var(--cor-de-destaque); 
+}
+
+/*
+New Data
+*/
+
+body {
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    box-sizing: border-box;
+    text-align: center;
+    background: rgb(128 0 0 / 66%);
+}
+
+
+
+.identifier {
+    display: flex; 
+    align-items: center; 
+    gap: 10px;
+}
+
+.user {
+    background-color: #aaa;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+.user img {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+
+.user-info {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.qrcode {
+    width: 100%;
+    max-width: 500px;
+    margin: 5px;
+}
+
+.section {
+    background-color: #ffffff;
+    padding: 50px 30px;
+    border: 1.5px solid #b2b2b2;
+    border-radius: 0.25em;
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
+}
+
+#my-qr-reader {
+    padding: 20px !important;
+    border: 1.5px solid #b2b2b2 !important;
+    border-radius: 8px;
+}
+
+#my-qr-reader img[alt="Info icon"] {
+    display: none;
+}
+
+#my-qr-reader img[alt="Camera based scan"] {
+    width: 100px !important;
+    height: 100px !important;
+}
+
+button {
+    padding: 10px 20px;
+    border: 1px solid #b2b2b2;
+    outline: none;
+    border-radius: 0.25em;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    background-color: #008000ad;
+    transition: 0.3s background-color;
+}
+
+button:hover {
+    background-color: #008000;
+}
+
+#html5-qrcode-anchor-scan-type-change {
+    text-decoration: none !important;
+    color: #1d9bf0;
+}
+
+video {
+    width: 100% !important;
+    border: 1px solid #b2b2b2 !important;
+    border-radius: 0.25em;
+}
+
+.money {
+    display: flex; 
 }
